--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "dependencies": {
     "@fontsource/inter": "^4.5.4",
     "@quasar/extras": "^1.0.0",
+    "@vueuse/rxjs": "^7.7.1",
     "core-js": "^3.6.5",
+    "dexie": "^3.2.1",
     "quasar": "^2.0.0",
-    "vue": "^3.0.0"
+    "rxjs": "^7.5.5",
+    "vue": "^3.0.0",
+    "vue-agile": "^2.0.0",
+    "vue-easy-slider": "^5.3.4",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
